# app

./: .apprunner.yaml  .env.example  .gitignore  COMMAND.md  ChatPsychologistAI_new.lnk  Dockerfile  Prompts for Chatbot.docx  README.md  af81f85d457fd19c26a7860cc212618403e82ab187f65a1bdfe6761201129f15_transcript.txt  app.py  app2.py  app3.py  df461be89d56b05f0ff9e4f6e75c5fdb0428b10ec00ea019d3bde9ebdec62855_transcript.txt  firebase_key.json  local_scanners.py  logger.py  pubsub_key.json  requirements.in  requirements.txt  requirements2.txt
application/: .env.example  .gitignore  Adaptation.py  Anxiety.py  Behavioral_Emotional_Children.py  Bipolar_affective_disorder.py  Depression.py  Disorder.py  Disorders.py  Eating_disorders.py  Identity_questions.py  Mental_Health_Statistics_2024.docx  OCD.py  PTSD.py  Paranoia.py  Psychosis.py  Readme.txt  Schizophrenia.py  Social_Anxiety.py  Unresolved_past_issues.py  appreg.py  diagnose_questions.py  personal-info-questions.py  personal_info.py  personal_insight.py  phase1_agent.py  requirements.txt
application/crewai_agents/: README.md  pyproject.toml
application/crewai_agents/src/crewai_agents/: crew.py  main.py
application/crewai_agents/src/crewai_agents/config/: agents.yaml  tasks.yaml
application/crewai_agents/src/crewai_agents/tools/: manager_agent_tool.py  personal_info_agent_tool.py  personal_insight_tool.py
chatbot/: Assertiveness.py  Compulsivity.py  Depression.py  Disorders.py  Dissociation.py  Fear_of_illness_or_death.py  Friendships_Relationships.py  Grief_problems.py  Low_self_confident.py  Sleep_problems.py  (+6 more)
(+69 files in other folders)
